tests/spec/pass/retry_module.aja
import (
    "modules/retry"
)

print(retry.backoffMs(10, 0))
print(retry.backoffMs(10, 3))
print(retry.backoffMs(10, 6, 100))
