tests/spec/fail/re_invalid_pattern.aja
import (
    "modules/re"
)

print(re.isMatch("[", "abc"))
